--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "jumperwf.github.io/site-visit-vplesser",
   "name": "site-visit-vplesser",
   "version": "0.1.0",
   "private": true,
